# bitcask

./: Cargo.toml  README.md
benches/: benches.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/server/src/: command.rs  config.rs  main.rs
crates/store/: Cargo.toml
crates/store/src/: bitcask.rs  config.rs  keydir.rs  lib.rs  merge.rs
crates/store/src/log/: files.rs  handle.rs  manager.rs  mod.rs  read.rs  read_file.rs  write.rs  write_file.rs
crates/store/tests/: tests.rs
examples/: bitcask.py
src/: bitcask.rs  command.rs  config.rs  keydir.rs  lib.rs  log_manager.rs  log_reader.rs  log_writer.rs  logwriter.rs  main.rs  merge.rs
tests/: tests.rs
