[package]
name = "bitcask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
log = "0.4.17"
miette = { version = "5.3.0", features = ["fancy"] }
simple_logger = "2.3.0"
tokio = { version = "1.21.1", features = ["full"] }
