[package]
name = "bitcask"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "crates/store",
]

[[bin]]
name = "bitcask-server"
path = "crates/server/src/main.rs"

[dependencies]
bytes = "1.2.1"
log = "0.4.17"
miette = { version = "5.3.0", features = ["fancy"] }
simple_logger = "2.3.0"
tokio = { version = "1.21.1", features = ["full"] }
# TODO maybe reorg so it's called `bitcask::store`
store = { version = "0.1.0", path = "crates/store" }
