[package]
name = "bitcask"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "crates/store",
]

[[bin]]
name = "bitcask-server"
path = "crates/server/src/main.rs"

[dependencies]
bytes = "1.2.1"
config = "0.13.3"
log = "0.4.17"
nom = "7.1.3"
serde = "1.0.152"
simple_logger = "2.3.0"
# TODO maybe reorg so it's called `bitcask::store`
store = { version = "0.1.0", path = "crates/store" }
tokio = { version = "1.21.1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
